# face_recognition

./: main_farec.py  pyproject.toml
